--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "dexie": "^4.2.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
